@@ -49,6 +49,8 @@ config
 ------
 config file - support workarounds/etc. for heterogenous cluster?
 map hostname -> IP config
+- first deal w/ tools
+- second deal w/ ipmidetect
 consolidate ipmiconsole,ipmipower,ipmimonitoring config files into freeipmi.conf?
 - after this, tweak "known issue" info about ps(1), put info in conf file, etc.
 - also update comments in contrib ganglia/nagios.
