@@ -91,5 +91,6 @@ Commit all configuration values from bmc-data-updt.conf and key 'lan_conf_misc:g
 Copyright \(co 2003-2008 FreeIPMI Core Team.  
 #include <@top_srcdir@/common/doc/manpage-common-gpl-program-text.man>
 .SH "SEE ALSO"
-bmc-config.conf(5), freeipmi(7), pef-config(8), ipmi-sensors-config(8)
+bmc-config.conf(5), freeipmi.hostmap(5), freeipmi(7), pef-config(8),
+ipmi-sensors-config(8)
 #include <@top_srcdir@/common/doc/manpage-common-homepage.man>
