@@ -54,5 +54,5 @@ Perform a cold reset.
 Copyright \(co 2008 FreeIPMI Core Team.  
 #include <@top_srcdir@/common/doc/manpage-common-gpl-program-text.man>
 .SH "SEE ALSO"
-freeipmi(7)
+freeipmi.hostmap(5), freeipmi(7)
 #include <@top_srcdir@/common/doc/manpage-common-homepage.man>
