@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT([freeipmi],[0.7.0.beta1],[freeipmi-devel@gnu.org])
-AC_REVISION([$Id: configure.ac,v 1.119 2008-05-03 17:58:05 chu11 Exp $])
+AC_REVISION([$Id: configure.ac,v 1.119.2.1 2008-05-06 22:15:13 chu11 Exp $])
 
 dnl We require a modern autoconf and automake
 AC_PREREQ([2.57])
@@ -349,6 +349,7 @@ AC_CHECK_FUNC([argp_parse], ,
 ACX_PTHREAD([], AC_MSG_ERROR([Posix threads required to build libipmiconsole]))
 
 dnl Misc checks and build options
+AC_FREEIPMI_HOSTMAP_FILE
 AC_IPMIPOWER_CONFIG_FILE
 AC_IPMI_MONITORING_SDR_CACHE_DIR
 AC_IPMI_MONITORING_SENSOR_CONFIG_FILE
