@@ -1,0 +1,7 @@
+.TH FREEIPMI.HOSTMAP 5 "@ISODATE@" "FreeIPMI @PACKAGE_VERSION@" "System Commands"
+#include <@top_srcdir@/common/doc/manpage-common-reporting-bugs.man>
+.SH "FILES"
+@FREEIPMI_HOSTMAP_FILE_DEFAULT@
+.SH "SEE ALSO"
+freeipmi(7)
+#include <@top_srcdir@/common/doc/manpage-common-homepage.man>
