@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: ipmi-fru.8.pre.in,v 1.27 2008-04-29 21:58:41 chu11 Exp $
+.\"$Id: ipmi-fru.8.pre.in,v 1.27.2.1 2008-05-06 22:15:21 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2007 The Regents of the University of California.
@@ -102,5 +102,5 @@ Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 Copyright (C) 2007 The Regents of the University of California.
 #include <@top_srcdir@/common/doc/manpage-common-gpl-program-text.man>
 .SH "SEE ALSO"
-freeipmi(7), bmc-config(8)
+freeipmi.hostmap(5), freeipmi(7), bmc-config(8)
 #include <@top_srcdir@/common/doc/manpage-common-homepage.man>
