@@ -73,5 +73,5 @@ Read LUN, NETFN, command and request data from file as standard input.
 Copyright \(co 2005-2008 FreeIPMI Core Team
 #include <@top_srcdir@/common/doc/manpage-common-gpl-program-text.man>
 .SH "SEE ALSO"
-freeipmi(7), bmc-config(8), ipmi-oem(8)
+freeipmi.hostmap(5), freeipmi(7), bmc-config(8), ipmi-oem(8)
 #include <@top_srcdir@/common/doc/manpage-common-homepage.man>
