@@ -96,5 +96,5 @@ Delete SEL entries in the range 12 to 42 on the local machine.
 Copyright \(co 2003-2008 FreeIPMI Core Team.  
 #include <@top_srcdir@/common/doc/manpage-common-gpl-program-text.man>
 .SH "SEE ALSO"
-freeipmi(7), bmc-config(8)
+freeipmi.hostmap(5), freeipmi(7), bmc-config(8)
 #include <@top_srcdir@/common/doc/manpage-common-homepage.man>
