@@ -82,5 +82,6 @@ Commit all configuration values from the sensor-data1.conf file.
 Copyright \(co 2007-2008 FreeIPMI Core Team.  
 #include <@top_srcdir@/common/doc/manpage-common-gpl-program-text.man>
 .SH "SEE ALSO"
-freeipmi(7), bmc-config(8), pef-config(8), ipmi-sensors(8), ipmimonitoring(8)
+freeipmi.hostmap(5), freeipmi(7), bmc-config(8), pef-config(8),
+ipmi-sensors(8), ipmimonitoring(8)
 #include <@top_srcdir@/common/doc/manpage-common-homepage.man>
