@@ -110,5 +110,5 @@ Show all sensors across a cluster using IPMI over LAN.
 Copyright \(co 2003-2008 FreeIPMI Core Team.  
 #include <@top_srcdir@/common/doc/manpage-common-gpl-program-text.man>
 .SH "SEE ALSO"
-freeipmi(7), bmc-config(8), ipmimonitoring(8)
+freeipmi.hostmap(5), freeipmi(7), bmc-config(8), ipmimonitoring(8)
 #include <@top_srcdir@/common/doc/manpage-common-homepage.man>
