@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: ipmiconsole.8.pre.in,v 1.31 2008-04-24 05:46:45 chu11 Exp $
+.\"$Id: ipmiconsole.8.pre.in,v 1.31.4.1 2008-05-06 22:15:24 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2006-2007 The Regents of the University of California.
@@ -252,5 +252,5 @@ Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 Copyright (C) 2006-2007 The Regents of the University of California.
 #include <@top_srcdir@/common/doc/manpage-common-gpl-program-text.man>
 .SH "SEE ALSO"
-ipmiconsole.conf(5), freeipmi(7), bmc-config(8)
+ipmiconsole.conf(5), freeipmi.hostmap(5), freeipmi(7), bmc-config(8)
 #include <@top_srcdir@/common/doc/manpage-common-homepage.man>
