@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: ipmiping.8.pre.in,v 1.12 2008-04-24 05:00:35 chu11 Exp $
+.\"$Id: ipmiping.8.pre.in,v 1.12.4.1 2008-05-06 22:15:26 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2003-2007 The Regents of the University of California.
@@ -57,5 +57,5 @@ Copyright (C) 2003-2007 The Regents of the University of California.
 #include <@top_srcdir@/common/doc/manpage-common-gpl-program-text.man>
 #include <@top_srcdir@/common/doc/manpage-common-ping-origin.man>
 .SH "SEE ALSO"
-freeipmi(7), ping(8), rmcpping(8)
+freeipmi.hostmap(5), freeipmi(7), ping(8), rmcpping(8)
 #include <@top_srcdir@/common/doc/manpage-common-homepage.man>
