@@ -76,5 +76,5 @@ Commit all configuration values from the pef-data1.conf file.
 Copyright \(co 2007-2008 FreeIPMI Core Team.  
 #include <@top_srcdir@/common/doc/manpage-common-gpl-program-text.man>
 .SH "SEE ALSO"
-freeipmi(7), bmc-config(8), ipmi-sensors-config(8)
+freeipmi.hostmap(5), freeipmi(7), bmc-config(8), ipmi-sensors-config(8)
 #include <@top_srcdir@/common/doc/manpage-common-homepage.man>
